# CodeReviewer-CamelTest

./: .gitignore  README.md
Backend/: .env.example  README.md  main.py  pyproject.toml  run.sh
Backend/agents/: architect_agent.py  auditor_agent.py  fixer_agent.py  persona_setup.py  society.py
Backend/chroma_db/: chroma.sqlite3
Backend/core/: custom_tools.py  diff_engine.py  interpreter_tool.py  llm_config.py  observed_agent.py  settings.py  tracking.py  utils.py  websocket_manager.py  workforce_tracking.py
Backend/features/: api.py  indexed_retriever.py  recon_service.py
docs/: architecture.md  context_management.md  features_analysis.md  observability.md  recon_service.md  sentinel_elite_features.md  walkthrough.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  DiffPanel.jsx  MissionBlueprint.jsx  MissionControl.jsx  TerminalPanel.jsx
mini_demo/: app.py  index.html  pyproject.toml  run_mini_audit.py
targeted_source_code/: app.py  pyproject.toml  requirements.txt  test_app.py
