[project]
name = "vulnerable-app"
version = "0.1.0"
description = "A vulnerable API target for CAMEL agents to patch"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.100.0",  # Purposefully old
    "uvicorn>=0.22.0",
    "pytest>=7.0.0",
    "httpx>=0.24.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
